force-app/main/default/objects/CryptoExchangeRateApi__c/CryptoExchangeRateApi__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>CryptoExchangeRateApi</label>
</CustomObject>