force-app/main/default/objects/CryptoExchangeRateApi__c/fields/Apikey__c.field-meta.xml
<CustomField>
    <fullName>Apikey__c</fullName>
    <label>Apikey</label>
    <length>255</length>
    <type>Text</type>
</CustomField>