force-app/main/default/objects/CryptoExchangeRateApi__c/fields/From_Currency__c.field-meta.xml
<CustomField>
    <fullName>From_Currency__c</fullName>
    <label>From Currency</label>
    <length>6</length>
    <type>Text</type>
</CustomField>