force-app/main/default/objects/CryptoExchangeRateApi__c/fields/To_Currency__c.field-meta.xml
<CustomField>
    <fullName>To_Currency__c</fullName>
    <label>To Currency</label>
    <length>6</length>
    <type>Text</type>
</CustomField>